fix dispplay, tool bug
